Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.5.6 (??/??/2009):
	libpurple:
	* Improve sleep behavior by aggregation of longer timeouts on second
	  boundaries to allow better power saving.  (Arunan Balasubramaniam)
	* Fix various crashes on exit.

	IRC:
	* Correctly handle WHOIS for users who are joined to a large number of
	  channels.
	* Notify the user if a /nick command fails, rather than trying
	  fallback nicks.

	MSN:
	* Fix a race condition causing occasional Pidgin crashes.
	* Fix some errors about the friendly name changing too fast caused
	  by MSN/Yahoo integration buddies.

	Yahoo:
	* Fix a crash when sending very long messages.

version 2.5.5 (03/01/2009):
	libpurple:
	* Fix a crash when removing an account with an unknown protocol id.
	* Beta support for SSL connections for AIM and ICQ accounts.  To
	  enable, check the "Use SSL" option from the Advanced tab when
	  editing your AIM or ICQ account. (Paul Aurich)
	* Fix a memory leak in SILC. (Luke Petre)
	* Fix some string handling in the SIMPLE prpl, which fixes some buddy name
	  handling and other issues. (Paul Aurich, Marcus Sundberg)
	* Implement support for resolving DNS via the SOCKS4 proxy (SOCKS4a).

	ICQ:
	* Fix retrieval of status messages from users of ICQ 6.x, Miranda, and
	  other libpurple clients. (Daniel Ljungborg)
	* Change client ID to match ICQ Basic 14.34.3096.  This fixes publishing
	  of buddy icons and available messages.
	* Properly publish status messages for statuses other than Available.
	  ICQ 6.x users can now see these status messages. (Daniel Ljungborg)
	* Fix receipt of messages from the mobile client Slick. (David Jedelsky)

	MSN:
	* Fix transfer of buddy icons, custom smileys, and files from the
	  latest Windows Live Messenger 9 official client. (Thomas
	  Gibson-Robinson)
	* Large (multi-part) messages are now correctly re-combined.
	* Federated/Yahoo! buddies should now stop creating sync issues at